# org-trace

./: .gitignore  Cargo.toml  README.md  RULES.md
.github/workflows/: release.yml
apps/lab-ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/lab-ui/src/: App.css  App.tsx  exportFilename.ts  index.css  liveView.ts
apps/lab-ui/test/: exportFilename.test.ts  liveView.test.ts
crates/cli/: Cargo.toml
crates/cli/src/: agent.rs  announce.rs  args.rs  auth.rs  claude_hook.rs  commands.rs  context.rs  db.rs  defaults.rs  history.rs  inspect.rs  main.rs  mcp.rs  mcp_config.rs  memory.rs  metadata.rs  native_hook.rs  output.rs  skill.rs  source.rs  sync.rs
crates/cli/tests/: mcp_smoke.rs
crates/core/: ARCHITECTURE.md  Cargo.toml
crates/core/src/: activity.rs  announcement_store.rs  attachment_store.rs  blame.rs  diff_capture.rs  explain.rs  file_session_blame.rs  global_home.rs  identity.rs  index.rs  index_types.rs  lib.rs  local_event_store.rs  log_store.rs  metadata_db.rs  native_source.rs  plan_metadata.rs  repo.rs  repo_context.rs  session_query.rs  source_discovery.rs  source_profile.rs  source_session_event.rs  sqlite_index.rs  sqlite_index_tests.rs  sqlite_schema.rs  store.rs  store_options.rs
crates/core/src/sources/: claude_code.rs  codex_app.rs  cursor_agent.rs  cursor_ide.rs  gemini.rs  jsonl.rs  liveness.rs  mod.rs  opencode.rs  orgii.rs  shell_edits.rs  traits.rs  windsurf.rs
crates/core/src/sources/cursor_family/: composer.rs  mod.rs  sqlite_kv.rs
crates/core/tests/: external_source_fixtures.rs
crates/core/tests/fixtures/external_sources/: README.md
crates/core/tests/fixtures/external_sources/claude_code/basic_session/: manifest.json
crates/core/tests/fixtures/external_sources/claude_code/basic_session/logs/: session-basic.jsonl
crates/core/tests/fixtures/external_sources/codex_app/: README.md
crates/core/tests/fixtures/external_sources/codex_app/patch_session/: manifest.json
crates/core/tests/fixtures/external_sources/codex_app/patch_session/logs/: codex-patch-session.jsonl
crates/core/tests/fixtures/external_sources/cursor_ide/: README.md
crates/core/tests/fixtures/external_sources/cursor_ide/generated_composer/: manifest.json
crates/core/tests/fixtures/external_sources/cursor_ide/generated_composer/db-spec/: cursor-kv.json
crates/core/tests/fixtures/external_sources/opencode/: README.md
crates/core/tests/fixtures/external_sources/opencode/basic_session/: manifest.json
crates/core/tests/fixtures/external_sources/opencode/basic_session/db-spec/: opencode.sql
crates/core/tests/fixtures/external_sources/windsurf/: README.md
crates/core/tests/fixtures/external_sources/windsurf/generated_composer/: manifest.json
crates/core/tests/fixtures/external_sources/windsurf/generated_composer/db-spec/: windsurf-kv.json
crates/importers/: Cargo.toml
crates/importers/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: actor.rs  events.rs  ids.rs  lib.rs  payloads.rs  sync.rs  trace_event.rs
crates/server/: Cargo.toml
crates/server/examples/: seed_event.rs
crates/server/src/: args.rs  auth.rs  index.rs  main.rs  routes.rs  store.rs
crates/sync/: Cargo.toml
crates/sync/src/: identity.rs  lib.rs  supabase.rs  wire.rs
docs/architecture/: README.md  agent-provenance-trace--0618.md  architecture.md  handoff-summary--0618.md  handoff-summary.md  orgii-adapter-contract.md  orgtrack-core-offload.md  session-metadata.md  source-querying.md
docs/mcp/: README.md
docs/protocol/: README.md
docs/self-hosting/: README.md  SYNC_E2E_STATUS.md  supabase.sql
docs/self-hosting/patches/: 2026-06-25-event-chunks-insert-rls.sql
examples/ci/: README.md
examples/claude-code/: README.md
examples/codex/: README.md
examples/cursor/: README.md
examples/planning-agent/: README.md
npm/: README.md  package.json
npm/scripts/: postinstall.js
scripts/: local_setup.sh  smoke_mcp.sh  smoke_mcp_driver.py  smoke_mvp.sh
