[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/importers",
    "crates/protocol",
    "crates/server",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/yorgai/brick"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal"] }
toml = "1.1.2"
uuid = { version = "1.10", features = ["serde", "v4"] }
