[package]
name = "brick"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
brick-core = { path = "../core" }
brick-importers = { path = "../importers" }
brick-protocol = { path = "../protocol" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit.workspace = true
ureq = { version = "3.3.0", features = ["json"] }
dialoguer = "0.12.0"
