[package]
name = "brick"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
brick-core = { path = "../core" }
brick-protocol = { path = "../protocol" }
brick-sync = { path = "../sync", optional = true }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit.workspace = true
uuid.workspace = true
dialoguer = "0.12.0"

[dev-dependencies]
serde_json.workspace = true
chrono.workspace = true
brick-protocol = { path = "../protocol" }

[features]
# Proprietary cross-server sync. Off by default so the open-source `brick`
# binary ships without any remote-sync command or client. Enable for private
# builds: `cargo build -p brick --features sync`.
default = []
sync = ["dep:brick-sync"]

