[package]
name = "brick-core"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
brick-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
toml.workspace = true
uuid.workspace = true
