[package]
name = "brick-importers"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
brick-protocol = { path = "../protocol" }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
