[package]
name = "brick-server"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
brick-core = { path = "../core" }
brick-protocol = { path = "../protocol" }
brick-sync = { path = "../sync" }
jsonwebtoken = "9.3"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
sha2.workspace = true

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
